# macrograph

./: pnpm-lock.yaml
app/: package.json
app/src/: App.tsx  httpfunc.ts  index.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
core/src/models/: Core.ts
crates/http_lib/: Cargo.toml
crates/http_lib/src/: lib.rs
