[package]
name = "http_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.28.0", features = ["full"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["shell-open", "updater"] }
serde_json = "1.0.96"